[package]
name = "swc_plugin_use_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = false

[dependencies]
serde = "1"
serde_json = "1.0.105"
swc_core = { version = "0.78.*", features = ["ecma_plugin_transform", "ecma_parser"] }
tracing = "0.1.37"
use_client = {path = "./transform"}

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
